--- a/.github/workflows/casr.yml
+++ b/.github/workflows/casr.yml
@@ -34,7 +34,7 @@ jobs:
         mvn clean install -Dmaven.test.skip=true
     - name: Run CASR
       run: |
-        find . -name '*.jar' -exec sh -c 'echo "Processing {}" && timeout 200s casr-java -o {}.casrep -- java -jar {}' \;
+        find . -name '*.jar' -exec sh -c 'echo "Processing {}" && timeout 1000s casr-java -o {}.casrep -- java -jar {}' \;
     - name: List any casr reports created
       run: |
-        find ./ -name "*.casrep" 
+        find . -type f -name "*.casrep"
